--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,7 @@ version: "2"
 services:
   kafka:
     hostname: kafka
+    container_name: kafka-broker
     image: confluentinc/cp-enterprise-kafka:7.3.3
     depends_on:
       - zookeeper
@@ -33,6 +34,7 @@ services:
       - "9092:9092"
   zookeeper:
     image: confluentinc/cp-zookeeper:7.3.3
+    container_name: zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: "2181"
       ZOOKEEPER_TICK_TIME: "2000"
