--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,11 +38,24 @@ services:
     environment:
       ZOOKEEPER_CLIENT_PORT: "2181"
       ZOOKEEPER_TICK_TIME: "2000"
+  schema-registry:
+    hostname: schema-registry
+    image: confluentinc/cp-schema-registry:7.2.4
+    container_name: schema-registry
+    links:
+      - kafka
+      - zookeeper
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: "kafka:9092"
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
   kafka-connect:
     image: confluentinc/cp-kafka-connect:7.2.4
     container_name: kafka-connect
     depends_on:
       - kafka
+      - schema-registry
     ports:
       - 8083:8083
       - 6987:8000
@@ -59,14 +72,14 @@ services:
       CONNECT_STATUS_STORAGE_TOPIC: _docker-status
       CONNECT_TOPIC_CREATION_ENABLE: "true"
       CONNECT_KEY_CONVERTER: org.apache.kafka.connect.storage.StringConverter
-      # CONNECT_KEY_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
-      CONNECT_VALUE_CONVERTER: org.apache.kafka.connect.storage.StringConverter
+      CONNECT_VALUE_CONVERTER_SCHEMA_REGISTRY_URL: 'http://schema-registry:8081'
+      CONNECT_VALUE_CONVERTER: io.confluent.connect.avro.AvroConverter
       CONNECT_LOG4J_ROOT_LOGLEVEL: "INFO"
       # CONNECT_LOG4J_LOGGERS: "org.apache.kafka.connect.runtime.rest=WARN,org.reflections=ERROR"
       CONNECT_CONFIG_STORAGE_REPLICATION_FACTOR: "-1"
       CONNECT_OFFSET_STORAGE_REPLICATION_FACTOR: "-1"
       CONNECT_STATUS_STORAGE_REPLICATION_FACTOR: "-1"
-#      CONNECT_PLUGIN_PATH: '/usr/share/java'
+      CONNECT_PLUGIN_PATH: '/usr/share/java'
       CONNECT_INTERNAL_KEY_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_VALUE_CONVERTER: org.apache.kafka.connect.json.JsonConverter
       CONNECT_INTERNAL_KEY_CONVERTER_SCHEMAS_ENABLE: 'false'
