--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>com.platformatory.kafka.connect</groupId>
     <artifactId>WebhookSourceConnector</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.1</version>
     <packaging>jar</packaging>
 
     <name>WebhookSourceConnector</name>
@@ -104,27 +104,43 @@
                     </execution>
                 </executions>
             </plugin>
+            
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>3.4.1</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.javahelps.maven.Main</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-shade-plugin</artifactId>
+                        <version>3.4.1</version>
+                        <executions>
+                            <execution>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>shade</goal>
+                                </goals>
+                                <configuration>
+                                        <transformers>
+                                        <transformer
+                                                implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                            <mainClass>com.javahelps.maven.Main</mainClass>
+                                        </transformer>
+                                    </transformers>
+                                    <createDependencyReducedPom>false</createDependencyReducedPom>
+                                    <shadedArtifactAttached>true</shadedArtifactAttached>
+                                    <shadedClassifierName>jar-with-dependencies</shadedClassifierName>
+                                         <!-- ADD THIS SECTION -->
+                                  <filters>
+                                      <filter>
+                                          <artifact>*:*</artifact>
+                                          <excludes>
+                                              <exclude>META-INF/*.SF</exclude>
+                                              <exclude>META-INF/*.DSA</exclude>
+                                              <exclude>META-INF/*.RSA</exclude>
+                                              <exclude>META-INF/*.MF</exclude>
+                                          </excludes>
+                                      </filter>
+                                  </filters>
+                                </configuration>
+                            </execution>
+                        </executions>
+                    </plugin>
         </plugins>
         <resources>
             <resource>
